--- a/.github/workflows/Test_Python_Input.yaml
+++ b/.github/workflows/Test_Python_Input.yaml
@@ -12,16 +12,15 @@ jobs:
   run-python-test:
    runs-on: ubuntu-latest
     steps:
+     - name: Checkout
+       uses: actions/checkout@v3
   
-  - name: Checkout
-    uses: actions/checkout@v2.3.4
+     - name: Setup Python
+       uses: actions/setup-python@v4
+       with:
+         python-version: '3.9'
   
-  - name: Setup Python
-    uses: actions/setup-python@v2.2.2
-    with:
-      python-version: 3.8
-  
-  - name: Execute Test Script
-    run: |
-      echo "Store: ${{ github.event.inputs.myInput }}"
-      INPUT_STORE=${{ github.event.inputs.myInput }} python3 test.py
+     - name: Execute Test Script
+       run: |
+         echo "Store: ${{ github.event.inputs.myInput }}"
+         INPUT_STORE=${{ github.event.inputs.myInput }} python3 test.py
